# Porgy

./: .gitignore  BUGS  CMakeLists.txt  README.md  TODO
plugins/general/RuleAlgorithm/: CMakeLists.txt  RuleAlgorithm.cpp  RuleAlgorithmElement.cpp  RuleAlgorithmElement.h  RuleAlgorithmParser.h
plugins/general/RuleCondition/: CMakeLists.txt  RuleCondition.cpp  RuleConditionElement.cpp  RuleConditionElement.h  RuleConditionParser.h
plugins/general/Strategy-spirit/: CMakeLists.txt  RunStrategyElement.cpp  RunStrategyElement.h  RunStrategyElementVisitors.h  Strategy.cpp  StrategyElement.cpp  StrategyElement.h  StrategyParser.h  UtreePrint.cpp  UtreePrint.h  UtreeWalk.cpp  UtreeWalk.h  runstrategyelementvisitors.cpp
plugins/interactors/PortNodeInteractors/: CMakeLists.txt  EditEdgeBendsInteractorPorgy.cpp  InteractorEditEdgeBendsComponent.cpp  InteractorEditEdgeBendsComponent.h  InteractorPortGraphAddEdgeComponent.cpp  InteractorPortGraphAddEdgeComponent.h  InteractorPortGraphDelElementComponent.cpp  InteractorPortGraphDelElementComponent.h  MouseAddPortNode.cpp  MouseAddPortNode.h  PortGraphDelElement.cpp  PortGraphSelectionModifier.cpp  SelectPortNodeInteractor.cpp  addPortNode.cpp  addPortNode.h  addPortNodeConfigurationWidget.cpp  addPortNodeConfigurationWidget.h  createPort.cpp  createPort.h  createPortNode.cpp  createPortNode.h  portnodeeditioninteractor.cpp
plugins/interactors/PortNodeInteractors/designer/: AddPortNodeConfigurationWidget.ui  DialogPort.ui  DialogPortNode.ui  resources.qrc
plugins/layout/RedrawTrace/: CMakeLists.txt  redraw_trace.cpp
plugins/measure/porgyDegree/: CMakeLists.txt  degree.cpp
plugins/perspective/: CMakeLists.txt
plugins/perspective/PorgyPerspective/: CMakeLists.txt
plugins/perspective/PorgyPerspective/designer/: AboutDialog.ui  GraphWidget.ui  NewTrace.ui  PorgyPerspectiveLogger.ui  PorgyPropertyManager.ui  PreferencesDialog.ui  porgyperspective.ui  ruleswidget.ui  rulevalidation.ui  special_paste.ui  statusbarpluginprogress.ui  strategymanagementwidget.ui  traceswidget.ui
plugins/perspective/PorgyPerspective/documentation/: CMakeLists.txt
plugins/perspective/PorgyPerspective/include/: AboutDialog.h  GlMainWidgetZoomAndPanAnimation.h  GraphWidget.h  NewTrace.h  PorgyPerspectiveLogger.h  PorgyPropertyManager.h  PreferencesDialog.h  abstractgraphhierachyitemmodel.h  codeeditorlistview.h  codeeditorplaintextview.h  generalpurposesyntaxhighlighter.h  generalpurposesyntaxhighlightingrules.h  graphmodificationlistener.h  highlightingrule.h  modelgraphtreemodel.h  porgyperspective.h  qtimagetooltip.h  rulesgraphitemmodel.h  ruleswidget.h  sortfilterproxymodel.h  special_paste.h  strategymanager.h  (+8 more)
plugins/view/: CMakeLists.txt
plugins/view/AbstractPorgyGraphView/: AbstractPorgyGraphView.cpp  AbstractPorgyGraphView.h  CMakeLists.txt  abstractportgraphview.cpp  abstractportgraphview.h  abstracttraceview.cpp  abstracttraceview.h  abstractviewconf.h  graphstatemanager.cpp  graphstatemanager.cxx  graphstatemanager.h  intermediatestates.cpp  intermediatestates.h
plugins/view/RuleGraphView/: CMakeLists.txt  RuleAlgorithmWidget.cpp  RuleAlgorithmWidget.h  RuleAttributesWidget.cpp  RuleAttributesWidget.h  RuleConditionWidget.cpp  RuleConditionWidget.h  porgyRuleViewQuickAccessBar.cpp  porgyRuleViewQuickAccessBar.h  porgyrulegraphview.cpp  porgyrulegraphview.h
plugins/view/TraceGraphView/: CMakeLists.txt  porgytracegraphview.cpp  porgytracegraphview.h  tracequickaccessbar.cpp  tracequickaccessbar.h
plugins/view/graphview/: CMakeLists.txt  porgygraphview.cpp  porgygraphview.h
plugins/view/porgySMView/: CMakeLists.txt  SMView.cpp  SMView.h  porgysmallmultiplesconfigurationwidget.cpp  porgysmallmultiplesconfigurationwidget.h  porgysmallmultiplesconfigurationwidget.ui
plugins/view/porgygraphstateview/: AbstractGraphMorphing.cpp  AbstractGraphMorphing.cxx  AbstractGraphMorphing.h  AnimationViewQuickAccessBar.cpp  AnimationViewQuickAccessBar.h  CMakeLists.txt  GlSceneMorphing.cpp  GlSceneMorphing.h  SimpleCameraMorphing.cpp  SimpleCameraMorphing.h  VisualPropertiesMorphing.cpp  VisualPropertiesMorphing.h  porgyAnimationconfigurationwidget.cpp  porgyAnimationconfigurationwidget.h  porgyAnimationtraceview.cpp  porgyAnimationtraceview.h  propertiesanimation.cpp  propertiesanimation.h  rulepreviewwidget.cpp  rulepreviewwidget.h
porgy-qt/: Animation.cpp  CMakeLists.txt  GraphElementValueModel.cpp  GraphVisualProperties.cpp  MetaNodeZoomInteractorComponent.cpp  ModelElementValueModel.cpp  PortNodeQt.cpp  PortNodeQtModel.cpp  PortQt.cpp  PropertyValueToQVariantConverter.cpp  PropertyValueToQVariantManager.cpp  RuleElementValueModel.cpp  SelectPortNodeInteractorComponent.cpp  Strategy.cpp  TraceElementValueModel.cpp  elementinformationinteractorcomponent.cpp  graphsnapshotmanager.cpp  pluginparametersconfigurationdialog.cpp  pluginselectionwizard.cpp  porgyitemdelegate.cpp  porgymimedata.cpp  porgypersistentsettings.cpp  porgysettings.cpp
porgy-qt/designer/: pluginparametersconfigurationdialog.ui  pluginselectionwizard.ui
porgy-qt/include/porgy/: Animation.h  GraphElementValueModel.h  GraphVisualProperties.h  MetaNodeZoomInteractorComponent.h  ModelElementValueModel.h  PorgyQtConstants.h  PortNodeQt.h  PortNodeQtModel.h  PortQt.h  PropertyValueToQVariantConverter.h  PropertyValueToQVariantManager.h  RuleElementValueModel.h  SelectPortNodeInteractorComponent.h  Strategy.h  TraceElementValueModel.h  elementinformationinteractorcomponent.h  graphsnapshotmanager.h  pluginparametersconfigurationdialog.h  pluginselectionwizard.h  porgyitemdelegate.h  porgymimedata.h  porgypersistentsettings.h  porgysettings.h
portgraph/: Bridge.cpp  BridgePort.cpp  CMakeLists.txt  PorgyTlpGraphStructure.cpp  Port.cpp  PortBase.cpp  PortGraph.cpp  PortGraphModel.cpp  PortGraphRule.cpp  PortNode.cpp  PortNodeBase.cpp  Trace.cpp
portgraph/include/portgraph/: Bridge.h  BridgePort.h  PorgyConstants.h  PorgyRelease.h.in  PorgyTlpGraphStructure.h  Port.h  PortBase.h  PortGraph.h  PortGraphModel.h  PortGraphRule.h  PortNode.h  PortNodeBase.h  Trace.h  porgyconf.h
(+131 files in other folders)
