INCLUDE_DIRECTORIES(${PORGY_TULIP_SRC_DIR}/library/tulip-gui/include ${PORGY_TULIP_SRC_DIR}/library/tulip-ogl/include)
FILE(GLOB CM_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_SOURCE_DIR}/*/CMakeLists.txt)
FOREACH(CM_FILE ${CM_FILES})
STRING(REGEX REPLACE "/CMakeLists.txt" "" CM_SUBDIR ${CM_FILE})
ADD_SUBDIRECTORY(${CM_SUBDIR})
ENDFOREACH(CM_FILE)
