INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${PORTGRAPH_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})

STRING(REGEX REPLACE ".*/" "" PLUGIN_NAME ${CMAKE_CURRENT_SOURCE_DIR})
STRING(TOLOWER ${PLUGIN_NAME} PLUGIN_NAME)

SET(LIB_SRCS
    RuleAlgorithm.cpp
    RuleAlgorithmElement.cpp)

ADD_LIBRARY(${PLUGIN_NAME}-${Tulip_VERSION} SHARED ${LIB_SRCS} ${LIB_MOC_SRCS})
TARGET_LINK_LIBRARIES(${PLUGIN_NAME}-${Tulip_VERSION} ${PORTGRAPH_LIBS} ${TULIP_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME}-${Tulip_VERSION} DESTINATION ${TulipPluginsInstallDir} COMPONENT Porgy)
