INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${PORTGRAPH_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})

STRING(REGEX REPLACE ".*/" "" PLUGIN_NAME ${CMAKE_CURRENT_SOURCE_DIR})
STRING(TOLOWER ${PLUGIN_NAME} PLUGIN_NAME)

SET(LIB_SRCS
    RuleCondition.cpp
    RuleConditionElement.cpp)

IF(NOT MSVC AND WIN32 AND "${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    # Fix build on Windows with MinGW/MSYS2, see: https://stackoverflow.com/a/29479701/1826326
    set_source_files_properties(RuleCondition.cpp PROPERTIES COMPILE_FLAGS -Og)
ENDIF(NOT MSVC AND WIN32 AND "${CMAKE_BUILD_TYPE}" STREQUAL "Debug")

ADD_LIBRARY(${PLUGIN_NAME}-${TULIP_VERSION} SHARED ${LIB_SRCS} ${LIB_MOC_SRCS})
TARGET_LINK_LIBRARIES(${PLUGIN_NAME}-${TULIP_VERSION} ${PORTGRAPH_LIBS} ${TULIP_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME}-${TULIP_VERSION} DESTINATION ${TULIP_PLUGINS_DIR} COMPONENT Porgy)
