INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${PORGY_INCLUDE_DIR})

STRING(REGEX REPLACE ".*/" "" PLUGIN_NAME ${CMAKE_CURRENT_SOURCE_DIR})
STRING(TOLOWER ${PLUGIN_NAME} PLUGIN_NAME)

FILE(GLOB LIB_SRCS "*.cpp")
FILE(GLOB LIB_UI "designer/*.ui")

FILE(GLOB HEADERS "*.h")

foreach(HEADER ${HEADERS})
set(QOBJECT_FOUND "")
set(QOBJECT_FOUND_LENGTH 0)
file(STRINGS ${HEADER} QOBJECT_FOUND REGEX "Q_OBJECT" NO_HEX_CONVERSION)
if(QOBJECT_FOUND)
SET(LIB_MOC ${LIB_MOC} ${HEADER})
endif(QOBJECT_FOUND)
endforeach(HEADER)

FILE(GLOB LIB_RCC "designer/*.qrc")


QTX_WRAP_UI(LIB_UI_SRCS ${LIB_UI})
QTX_WRAP_CPP(LIB_MOC_SRCS ${LIB_MOC})
QTX_ADD_RESOURCES(LIB_RCC_SRCS ${LIB_RCC})

ADD_LIBRARY(${PLUGIN_NAME}-${Tulip_VERSION} SHARED ${LIB_SRCS} ${LIB_UI_SRCS} ${LIB_MOC_SRCS} ${LIB_RCC_SRCS})
TARGET_LINK_LIBRARIES(${PLUGIN_NAME}-${Tulip_VERSION} ${PORGY_LIBS} ${OPENGL_gl_LIBRARY} ${TULIP_LIBRARIES} ${QT_LIBRARIES} )

INSTALL(TARGETS ${PLUGIN_NAME}-${Tulip_VERSION} DESTINATION ${TulipInteractorPluginsInstallDir}/ COMPONENT Porgy)
