INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${TULIP_INCLUDE_DIR} ${PORTGRAPH_INCLUDE_DIR})

STRING(REGEX REPLACE ".*/" "" PLUGIN_NAME ${CMAKE_CURRENT_SOURCE_DIR})
STRING(TOLOWER ${PLUGIN_NAME} PLUGIN_NAME)

SET(LIB_SRCS degree.cpp)

ADD_LIBRARY(${PLUGIN_NAME}-${Tulip_VERSION} SHARED ${LIB_SRCS})
TARGET_LINK_LIBRARIES(${PLUGIN_NAME}-${Tulip_VERSION} ${TULIP_LIBRARY} ${PORTGRAPH_LIBS})

INSTALL(TARGETS ${PLUGIN_NAME}-${Tulip_VERSION} DESTINATION ${TulipPluginsInstallDir} COMPONENT Porgy)
