INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../AbstractPorgyGraphView ${CMAKE_CURRENT_BINARY_DIR} ${PORGY_INCLUDE_DIR})

STRING(REGEX REPLACE ".*/" "" PLUGIN_NAME ${CMAKE_CURRENT_SOURCE_DIR})
STRING(TOLOWER ${PLUGIN_NAME} PLUGIN_NAME)

SET(LIB_SRCS
    porgytracegraphview.cpp
    tracequickaccessbar.cpp
    )

FILE(GLOB LIB_RCC "resources/traceviewresources.qrc")

SET(LIB_MOC
    porgytracegraphview.h
    tracequickaccessbar.h
    )

QTX_WRAP_CPP(LIB_MOC_SRCS ${LIB_MOC})
QTX_ADD_RESOURCES(LIB_RCC_SRCS ${LIB_RCC})

ADD_LIBRARY(${PLUGIN_NAME}-${TULIP_VERSION} SHARED ${LIB_SRCS} ${LIB_RCC_SRCS} ${LIB_MOC_SRCS})
TARGET_LINK_LIBRARIES(${PLUGIN_NAME}-${TULIP_VERSION} PorgyAbstractViewStatic PorgyAbstractTraceViewStatic  ${PORGY_LIBS} ${TULIP_LIBRARIES} ${QT_LIBRARIES} ${OPENGL_gl_LIBRARY})
INSTALL(TARGETS ${PLUGIN_NAME}-${TULIP_VERSION} DESTINATION ${TULIP_VIEW_PLUGINS_DIR} COMPONENT Porgy)
